--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14.x' # Change as needed
+          node-version: '18.x' # Updated to the required version
 
       - name: Install dependencies
         run: npm install
