--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
-        with:
-          aws-region: ${{ secrets.AWS_REGION }} 
+        env:
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
 
       - name: Build Docker image
         run: |
